add main navigation

--- a/index.html
+++ b/index.html
@@ -16,18 +16,26 @@
 </head>
 <body>
     <header>
-        <nav class="navigation">
-            <ul class="navigation__list">
-                <li class="navigation__list--item">Home</li>
-                <li class="navigation__list--item">Blog</li>
-                <li class="navigation__list--item">Portfolio</li>
-                <li><span>Creative</span></li>
-                <li class="navigation__list--item">Shop</li>
-                <li class="navigation__list--item">Contact</li>
-            </ul>
-            <i class="fas fa-search"></i>
-            <i class="fas fa-shopping-bag"></i>
-        </nav>
+        <div class="wrapper">
+            <nav class="navigation">
+                <div class="navigation__container">
+                    <ul class="navigation__list">
+                        <li class="navigation__list--item"><a href="#">Home</a></li>
+                        <li class="navigation__list--item"><a href="#">Blog</a></li>
+                        <li class="navigation__list--item"><a href="#">Portfolio</a></li>
+                    </ul>
+                </div>
+                <h1 class="navigation__logo">Creative</h1>
+                <div class="navigation__container">
+                    <ul class="navigation__list">
+                        <li class="navigation__list--item"><a href="#">Shop</a></li>
+                        <li class="navigation__list--item"><a href="#">Contact</a></li>
+                        <li class="navigation__list--item"><i class="fas fa-search"></i></li>
+                        <li class="navigation__list--item"><i class="fas fa-shopping-bag"></i></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 </body>
 </html>
