added slider, features sections

--- a/index.html
+++ b/index.html
@@ -20,22 +20,71 @@
             <nav class="navigation">
                 <div class="navigation__container">
                     <ul class="navigation__list">
-                        <li class="navigation__list--item"><a href="#">Home</a></li>
-                        <li class="navigation__list--item"><a href="#">Blog</a></li>
-                        <li class="navigation__list--item"><a href="#">Portfolio</a></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Home</a></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Blog</a></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Portfolio</a></li>
                     </ul>
                 </div>
                 <h1 class="navigation__logo">Creative</h1>
                 <div class="navigation__container">
                     <ul class="navigation__list">
-                        <li class="navigation__list--item"><a href="#">Shop</a></li>
-                        <li class="navigation__list--item"><a href="#">Contact</a></li>
-                        <li class="navigation__list--item"><i class="fas fa-search"></i></li>
-                        <li class="navigation__list--item"><i class="fas fa-shopping-bag"></i></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
+                        <li class="navigation__list--item"><a href="#" class="link">Contact</a></li>
+                        <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
+                        <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+    <main>
+
+        <section id="branding">
+            <div class="image-container">
+                <img src="./assets/home-2.jpeg" alt="">
+            </div>
+            <div class="container">
+                <div class="container__content">
+                    <h2>Branding</h2>
+                    <p>Venture first mover advantage incubator metrics focus backing business-to-consumer.</p>
+                </div>
+                <div class="container__content">
+                    <h2>Design & Develop</h2>
+                    <p>Venture first mover advantage incubator metrics focus backing business-to-consumer.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="slider">
+            <div class="slider-container">
+                <i class="fas fa-angle-left"></i>
+                <img src="./assets/home-3.jpeg" alt="" class="slider-container--image">
+                <i class="fas fa-angle-right"></i>
+            </div>
+            <p>
+                Ecosystem iPad disruptive social media low hanging fruit stealth launch party handshake market branding.
+                Pitch agile development business plan stealth channels prototype mass market product management value proposition startup strategy. 
+                Product management early adopters user experience metrics advisor gamification responsive web design hackathon termsheet backing series.
+            </p>
+        </section>
+
+        <section id="features">
+            <div class="feature-container">
+                <i class="fas fa-magic"></i>
+                <h3>Unique Design</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+            <div class="feature-container">
+                <i class="fa-solid fa-map-pin"></i>
+                <h3>Seo Marketing</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+            <div class="feature-container">
+                <i class="fa-solid fa-map-pin"></i>
+                <h3>Seo Marketing</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
