Added more content for features section

--- a/index.html
+++ b/index.html
@@ -75,13 +75,28 @@
                 <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
             </div>
             <div class="feature-container">
-                <i class="fa-solid fa-map-pin"></i>
+                <i class="fas fa-map-pin"></i>
                 <h3>Seo Marketing</h3>
                 <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
             </div>
             <div class="feature-container">
-                <i class="fa-solid fa-map-pin"></i>
+                <i class="fas fa-desktop"></i>
+                <h3>Retina Ready</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+            <div class="feature-container">
+                <i class="fas fa-shopping-bag"></i>
                 <h3>Seo Marketing</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+            <div class="feature-container">
+                <i class="fas fa-sliders-h"></i>
+                <h3>Ecommerce Ready</h3>
+                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            </div>
+            <div class="feature-container">
+                <i class="fas fa-smile"></i>
+                <h3>Customizable</h3>
                 <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
             </div>
         </section>
