refactored features section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 
         <section id="branding">
             <div class="image-container">
-                <img src="./assets/home-2.jpeg" alt="">
+                <img src="./assets/home-2.jpeg" alt="" class="homeImg-2">
+                <div class="circle">
+                    <img src="./assets/home-circle-text.png" alt="" class="circle-img">
+                </div>
             </div>
             <div class="container">
                 <div class="container__content">
@@ -69,35 +72,67 @@
         </section>
 
         <section id="features">
-            <div class="feature-container">
-                <i class="fas fa-magic"></i>
-                <h3>Unique Design</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
-            </div>
-            <div class="feature-container">
-                <i class="fas fa-map-pin"></i>
-                <h3>Seo Marketing</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
-            </div>
-            <div class="feature-container">
-                <i class="fas fa-desktop"></i>
-                <h3>Retina Ready</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
-            </div>
-            <div class="feature-container">
-                <i class="fas fa-shopping-bag"></i>
-                <h3>Seo Marketing</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
-            </div>
-            <div class="feature-container">
-                <i class="fas fa-sliders-h"></i>
-                <h3>Ecommerce Ready</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
-            </div>
-            <div class="feature-container">
-                <i class="fas fa-smile"></i>
-                <h3>Customizable</h3>
-                <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+            <div class="features--container">
+                <div class="inner-container">
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-magic"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Unique Design</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-map-pin"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Seo Marketing</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="inner-container">
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-desktop"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Retina Ready</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-shopping-bag"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Ecommerce Ready</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="inner-container">
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-sliders-h"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Advanced Options</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                    <div class="content--container">
+                        <div class="icon-container">
+                            <i class="fas fa-smile"></i>
+                        </div>
+                        <div class="feature-content">
+                            <h3>Customizable</h3>
+                            <p>Twitter validation first mover advanage advisor beta churn rate low hanging fruit burn</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
