added team section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
                 </div>
             </div>
         </section>
+
+        <section id="team">
+            <div class="wrapper">
+                <h3>Meet Our Team</h3>
+                <div class="team__container">
+                    <div class="team__container--description">
+                        <h4>Team Players</h4>
+                        <p>
+                            Pitch client interaction design ownership disruptive leverage prototype conversion.
+                            Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical user interface.
+                        </p>
+                    </div>
+                    <div class="team__container--images">
+                        <img src="./assets/home-5.jpeg" alt="">
+                        <img src="./assets/home-6.jpeg" alt="">
+                        <img src="./assets/home-7.jpeg" alt="">
+                        <img src="./assets/home-8.jpeg" alt="">
+                        <img src="./assets/home-9.jpeg" alt="">
+                    </div>
+                    <p>Want to work with us!</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
