cleaned up slider section

--- a/index.html
+++ b/index.html
@@ -59,16 +59,20 @@
         </section>
 
         <section id="slider">
-            <div class="slider-container">
-                <i class="fas fa-angle-left"></i>
-                <img src="./assets/home-3.jpeg" alt="" class="slider-container--image">
-                <i class="fas fa-angle-right"></i>
+            <div class="wrapper">
+                <div class="slider-container">
+                    <i class="fas fa-angle-left"></i>
+                    <img src="./assets/home-3.jpeg" alt="" class="slider-container--image">
+                    <i class="fas fa-angle-right"></i>
+                </div>
+                <p>
+                    Ecosystem iPad disruptive social media low hanging fruit stealth launch party handshake market branding.
+                    Pitch agile development business plan stealth channels prototype mass market product management value proposition
+                    startup strategy.
+                    Product management early adopters user experience metrics advisor gamification responsive web design hackathon
+                    termsheet backing series.
+                </p>
             </div>
-            <p>
-                Ecosystem iPad disruptive social media low hanging fruit stealth launch party handshake market branding.
-                Pitch agile development business plan stealth channels prototype mass market product management value proposition startup strategy. 
-                Product management early adopters user experience metrics advisor gamification responsive web design hackathon termsheet backing series.
-            </p>
         </section>
 
         <section id="features">
