tweaked team section

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                             Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical user interface.
                         </p>
                     </div>
+                    <img src="./assets/home-5.jpeg" alt="">
+                    <img src="./assets/home-6.jpeg" alt="">
                     <div class="team__container--images">
-                        <img src="./assets/home-5.jpeg" alt="">
-                        <img src="./assets/home-6.jpeg" alt="">
                         <img src="./assets/home-7.jpeg" alt="">
                         <img src="./assets/home-8.jpeg" alt="">
                         <img src="./assets/home-9.jpeg" alt="">
                     </div>
-                    <p>Want to work with us!</p>
+                    <p class="team__container--join">Want to work with us!</p>
                 </div>
             </div>
         </section>
