--- a/index.html
+++ b/index.html
@@ -162,6 +162,57 @@
                 </div>
             </div>
         </section>
+
+        <section id="contact">
+            <div class="contact__content">
+                <h4>Drop us a line</h4>
+                <p>
+                    Pitch client interaction design ownership disruptive leverage prototype conversion.
+                    Deployment validation gen-z disruptive paradigm shift churn rate niche market graphical 
+                    user interface.
+                </p>
+                <button>View Portfolio</button>
+            </div>
+            <img src="./assets/home-10.jpeg" alt="">
+        </section>
     </main>
+    <footer id="footer">
+        <div class="footer__contact">
+            <h5>Contact us</h5>
+            <ul>
+                <li>6591 Orchard Street, NY 10002, United States</li>
+                <li>Email: contact@onepro.co</li>
+                <li>Phone 01: +00 (9) 123 3456 789</li>
+                <li>Phone 02: +00 (9) 123 3456 788</li>
+                <li>Fax: +00 (9) 643 6543 898</li>
+            </ul>
+            <div class="footer__sm">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+        <div class="footer__posts">
+            <h5>recent posts</h5>
+            <ul>
+                <li>Conversion hackathon partner</li>
+                <li>Network channels entrepreneur</li>
+                <li>Return on investment creative</li>
+                <li>Assets interaction design venture</li>
+                <li>Infographic learning curve</li>
+            </ul>
+        </div>
+        <div class="footer__form">
+            <h5>Twitter widget</h5>
+            <form action="">
+                <label for="email">Signup for emails and notifications below.</label>
+                <input type="email" placeholder="Enter your email">
+                <button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+            </form>
+        </div>
+        <div class="footer__logo">
+            <h5>Creative Agency</h5>
+        </div>
+    </footer>
 </body>
 </html>
