updated blog page

--- a/blog.html
+++ b/blog.html
@@ -39,40 +39,173 @@
         </div>
     </header>
     <article class="article">
-        <h2>How to run a creative agency</h2>
-        <p><a href="index.html">Home</a>/<a href="blog.html">Blog</a>/How to Run a Creative Agency</p>
-        <div class="article__information">
-            <div class="article__author">
-                <img src="./assets/blog-2.jpeg" alt="">
-                <h3>Alex</h3>
-                <p>Administrator</p>
+        <div class="wrapper">
+            <h2>How to run a creative agency</h2>
+            <p class="article__link"><a href="index.html">Home</a>/<a href="blog.html">Blog</a>/How to Run a Creative Agency</p>
+            <div class="article__information--container">
+                <div class="article__information">
+                    <div class="article__information--author">
+                        <img src="./assets/blog-2.jpeg" alt="">
+                        <div class="article__information--author--info">
+                            <h3>Alex</h3>
+                            <p>Administrator</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="article__information">
+                    <div class="article__information--date">
+                        <h3>Date</h3>
+                        <p>July 31, 2018</p>
+                    </div>
+                    <div class="article__information--category">
+                        <h3>Category</h3>
+                        <p>Entertainment, Business</p>
+                    </div>
+                    <div class="article__information--tags">
+                        <h3>Tags</h3>
+                        <p>Design, Web, Lifestyle, Site</p>
+                    </div>
+                </div>
             </div>
-            <div class="article__information">
-                <h3>Date</h3>
-                <p>July 31, 2018</p>
-                <h3>Category</h3>
-                <p>Entertainment, Business</p>
-                <h3>Tags</h3>
-                <p>Design, Web, Lifestyle, Site</p>
-            </div>
-            <div class="artice__content">
-                <p>Analytics bandwidth bootstrapping seed round virality inforgraphic ownership long tail gen-z stealth channels growth hacking ecosystem. Niche market MVP focus hackathon startup analytics back low hanging fruit A/B testing agile development paradigm shift</p>
-                <p>Strategy deployment learning curve. Gamification bootstrapping iPhone release direct mailing. Backing iPhone product management. Non-disclosure agreement business plan bandwidth business-to-business founders niche market scrum project disruptive.</p>
-                <p>Infrastructure customer pivot seed money incubator funding equity twitter early adopters. Strategy client technology release supply release supply chain customer funding return on investment.
-                    iPad value proposition strategy growth hacking business-to-customer MVP release prototype. 
-                    Mass market facebook venture angel investor creative ecosystem technology conversion direct mailing client user experience iteration first mover advantage. 
+            <div class="article__content">
+                <p>
+                    Analytics bandwidth bootstrapping seed round virality inforgraphic ownership long tail gen-z stealth channels growth hacking ecosystem. 
+                    Niche market MVP focus hackathon startup analytics back low hanging fruit A/B testing agile development paradigm shift
+                </p>
+                <p>
+                    Strategy deployment learning curve. Gamification bootstrapping iPhone release direct mailing. 
+                    Backing iPhone product management. Non-disclosure agreement business plan bandwidth business-to-business founders niche
+                    market scrum project disruptive.
+                </p>
+                <p>
+                    Infrastructure customer pivot seed money incubator funding equity twitter early adopters. 
+                    Strategy client technology release supply release supply chain customer funding return on investment.
+                    iPad value proposition strategy growth hacking business-to-customer MVP release prototype.
+                    Mass market facebook venture angel investor creative ecosystem technology conversion direct mailing client user experience iteration first mover advantage.
                     Equity crowdsource Infrastructure disruptive angel investor hackathon. 
-                    Channels conversion focus metrics android scrum project vesting period buyer crowdfunding investor. User experience success iPad interaction design marketing iPhone funding analytics stealth freemium. 
-                    Crowdfunding validation focus twitter ownershipanalytics client gen-z partner network seed round. 
+                    User experience success iPad interaction design marketing iPhone funding analytics stealth freemium. 
+                    Crowdfunding validation focus twitter ownershipanalytics client gen-z partner network seed round.
                 </p>
-                <p>Crowdfunding conversion accelerator scrum project angel investor. Technology leverage handshake branding seed money lean startup business-to-business channels.
-                    Termsheet branding advisor venture iteration pitch series A financing first mover advantage ramen validation. 
-                    Return on investment deployment analytics MVP. Scrum project learning curve equity social proof. 
-                    Marketing conversion crowdsource business model canvas interaction design infrastructure android chrun rate agile development user experience ecosystem. 
-                    Venture first mover advantage incubator metrics focus backing business-to-consumer. Innovator advisor incubator MVP. 
+                <p>
+                    Crowdfunding conversion accelerator scrum project angel investor. 
+                    Technology leverage handshake branding seed money lean startup business-to-business channels.
+                    Termsheet branding advisor venture iteration pitch series A financing first mover advantage ramen validation.
+                    Return on investment deployment analytics MVP. Scrum project learning curve equity social proof.
+                    Marketing conversion crowdsource business model canvas interaction design infrastructure android chrun rate agile development user experience ecosystem.
+                    Venture first mover advantage incubator metrics focus backing business-to-consumer. 
+                    Innovator advisor incubator MVP.
                 </p>
+            </div>
+            <div class="article__sm">
+                <p>Share:</p>
+                <div class="icons">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
             </div>
         </div>
     </article>
+
+    <section id="posts">
+        <div class="wrapper">
+            <h2>Related Posts</h2>
+            <div class="posts">
+                <div class="posts__post">
+                    <img src="./assets/blog-3.jpeg" alt="">
+                    <p>July, 25, 2018</p>
+                </div>
+                <div class="posts__post">
+                    <img src="./assets/blog-4.jpeg" alt="">
+                    <p>July, 26, 2018</p>
+                </div>
+                <div class="posts__post">
+                    <img src="./assets/blog-5.jpeg" alt="">
+                    <p>July, 28, 2018</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="comments">
+        <div class="wrapper">
+            <h2>02 Comments</h2>
+            <div class="comment">
+                <div class="">
+                    <img src="./assets/blog-6.jpeg" alt="">
+                </div>
+                <div class="comment__container">
+                    <h3 class="comment__container--name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
+                    <p class="comment__container--text">Ecosystem iPad disruptive social media low hanging fruit stealth launch
+                        party handshake market branding.</p>
+                    <p class="comment__container--date">Jul 17, 2015 at 15 hours ago</p>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="">
+                    <img src="./assets/blog-7.jpeg" alt="">
+                </div>
+                <div class="comment__container">
+                    <h3 class="comment__container--name">Daniel Vandaft <span><a href="#"> - reply</a></span></h3>
+                    <p class="comment__container--text">Pitch agile development business plan stelth channels prototype mass market
+                        product management value proposition startup strategy.</p>
+                    <p class="comment__container--date">Jul 17, 2015 at 15 hours ago</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="comment-form">
+        <div class="wrapper">
+            <h2>Leave a comment</h2>
+            <form action="">
+                <input type="text" placeholder="Enter your name" required>
+                <input type="email" name="" id="" placeholder="Enter your email" required>
+                <input type="text" placeholder="Subject (optional)">
+                <input type="text">
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
 </body>
+<footer class="footer">
+    <div class="wrapper">
+        <div class="footer__contact">
+            <h5>Contact us</h5>
+            <ul>
+                <li>6591 Orchard Street, NY 10002, United States</li>
+                <li>Email: contact@onepro.co</li>
+                <li>Phone 01: +00 (9) 123 3456 789</li>
+                <li>Phone 02: +00 (9) 123 3456 788</li>
+                <li>Fax: +00 (9) 643 6543 898</li>
+            </ul>
+            <div class="footer__sm">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+        </div>
+        <div class="footer__posts">
+            <h5>recent posts</h5>
+            <ul>
+                <li>Conversion hackathon partner</li>
+                <li>Network channels entrepreneur</li>
+                <li>Return on investment creative</li>
+                <li>Assets interaction design venture</li>
+                <li>Infographic learning curve</li>
+            </ul>
+        </div>
+        <div class="footer__form">
+            <h5>Twitter widget</h5>
+            <form action="">
+                <label for="email">Signup for emails and notifications below.</label>
+                <input type="email" placeholder="Enter your email">
+                <button type="submit"><i class="fas fa-long-arrow-alt-right"></i></button>
+            </form>
+        </div>
+    </div>
+    <div class="footer__logo">
+        <h5>Creative Agency</h5>
+    </div>
+</footer>
 </html>
