--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="navigation__container">
                     <ul class="navigation__list">
                         <li class="navigation__list--item"><a href="#" class="link">Shop</a></li>
-                        <li class="navigation__list--item"><a href="#" class="link">Contact</a></li>
+                        <li class="navigation__list--item"><a href="contact.html" class="link">Contact</a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-search"></i></a></li>
                         <li class="navigation__list--item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
                     </ul>
